--- a/data/deathanimations/tags/entity_types/projectiles.json
+++ b/data/deathanimations/tags/entity_types/projectiles.json
@@ -4,6 +4,7 @@
     "minecraft:arrow",
     "minecraft:spectral_arrow",
     "minecraft:trident",
-    "minecraft:snowball"
+    "minecraft:snowball",
+    "minecraft:egg"
   ]
 }
